src/test/deca/syntax/valid/without_class/float.deca
// Description :
//    test syntax floats (decimal & hexadecimal)
//
// Resultats :
//    ok
//
// Historique:
//    cree le 14/01/2023

{
    float f = 1.0e+10;
    float f = 1.0e10;
    float f = 1.0e-10;
    float f = 0x56.AP2;
    float f = 0X5FAb8c.9F8fBbp-18f;
    float f = 0X5FAb8c.9F8fBbp18f;
    float f = 0X5FAb8c.9F8fBbp+18f;

}