src/test/deca/syntax/invalid/without_class/oversized_float.deca
/// Description:
// 	  test syntax error oversized float
//
// Resultats:
// 	  FLOAT_OVERFLOW_EXCEPTION: The float could not be parsed (probably because it's too large)
//    line 10
// Historique:
// 	  cree le 14/01/2023
{
    float f = 111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111.0;
}